# lega-frontend

./: README.md  deploy.sh  ecosystem.config.js  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
src/app/activity/: page.tsx
src/app/admin/activity/: page.tsx
src/app/admin/settings/: page.tsx
src/app/admin/users/: page.tsx
src/app/analytics/: page.tsx
src/app/auth/: page.tsx
src/app/auth/onboarding/: page.tsx
src/app/auth/set-password/: page.tsx
src/app/auth/verify-otp/: page.tsx
src/app/billing/: page.tsx
src/app/cases/: page.tsx
src/app/cases/[id]/: page.tsx
src/app/chat/: page.tsx
src/app/clients/cases/: page.tsx
src/app/clients/lawyers/: page.tsx
src/app/dashboard/: page.tsx
src/app/documents/: page.tsx
src/app/lawyers/portfolio/: page.tsx
src/app/lawyers/staff/: page.tsx
src/app/login/: page.tsx
src/app/payment/: page.tsx
src/app/plans/: page.tsx
src/app/register/: page.tsx
src/app/settings/: page.tsx
src/app/templates/: page.tsx
src/components/: AuthPageFallback.tsx  DashboardLayout.tsx  DocumentEditor.tsx  Header.tsx  LawyerRecommendation.tsx  ProfileCompletionModal.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toast.tsx  WelcomeGuide.tsx
src/components/charts/: BarChart.tsx  DonutChart.tsx  MiniLineChart.tsx
src/lib/: OfflineModeContext.tsx  api.ts  errorUtils.ts  roleCheck.ts  sessionManager.ts  useAutocorrect.ts  utils.ts
src/styles/: globals.css
(+2 files in other folders)
